syntax = "proto3";
package com.learn.netty.grpc;
option java_package = "com.learn.netty.grpc";
option java_outer_classname = "StuInfo";

service StudentService {
    rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message StreamRequest {
    string request_info = 1;
}
message StreamResponse {
    string response_info = 1;
}
